Update unit and integration tests for UserService and UserTopTracksService